# LoreTex

./: .gitignore  CODE_OF_CONDUCT.md  License.txt  README.md  benchmarking.lua  benchmarking.tex  characters-and-geography.lua  characters-and-geography.tex  characters.lua  common.lua  comparer.lua  dates-and-years.lua  dates-and-years.tex  dictionary.tex  entities-associations.lua  entities-characters.lua  entities-classes.lua  entities-geography.lua  entities-history-api.lua  entities-history-processing.lua  entities-history.lua  entities-history.tex  entities-items.lua  entities-landmarks.lua  entities-languages.lua  entities-organisations.lua  entities-print.lua  entities-processing.lua  entities-protected-descriptors.lua  entities-protected-descriptors.tex  entities-species.lua  entities-spells.lua  entities-tex-api.lua  entities-types.lua  entities.lua  entities.tex  errors.lua  errors.tex  ft.tex  history.lua  (+33 more)
entities/: api.lua  (+25 more)
gui/: Cargo.toml  example.db
gui/migrations/2023-03-13-200315_create_entities/: up.sql
gui/src/: db_col_view.rs  errors.rs  file_dialogs.rs  gui_main.rs  lore_database.rs  main.rs  schema.rs  sql_operations.rs  user_preferences.rs
gui/src/gui_main/: gui_message.rs  mod.rs  updating.rs  widget.rs
rust/: Cargo.toml  build.rs  build.sh  example.db  loretex_api.h  panic-backtrace.txt  panic-repro-steps.txt
rust/migrations/2023-04-15-145233_relationships/: up.sql
rust/src/: c_api.rs  errors.rs  lib.rs  lore_database.rs  main.rs
rust/src/api/: aux.rs  c_api.rs
rust/src/gui/: db_col_view.rs  messages.rs  mod.rs  user_preferences.rs
(+181 files in other folders)
