[package]
name = "lore_tex_sql_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.8.0"
iced_aw = { version = "0.4.1", default-features = false, features = ["selection_list", "card"] }
diesel = {version = "2.0.3", features = ["sqlite"]}
diesel_migrations = {version = "2.0.0"}
dotenvy = "0.15.6"