[package]
name = "loretex"
version = "0.1.0"
edition = "2021"

[lib]
name         = "loretex"
crate-type   = ["rlib", "cdylib"]

[dependencies]
diesel = {version = "2.0.3", features = ["sqlite"]}
diesel_migrations = {version = "2.0.0"}
iced = "0.8.0"
iced_aw = { version = "0.4.1", default-features = false, features = ["card", "selection_list"] }
libc = "0.2.140"
preferences = {version = "1.1.0"}
rfd = "0.11.3"